fix formatting when h1 wraps.

--- a/source/stylesheets/blog.css.scss
+++ b/source/stylesheets/blog.css.scss
@@ -1,6 +1,5 @@
 article.blog-post {
   h1 {
-    height: 24px;
     padding-left: 25px;
   }
 
